syntax = "proto3";

package AUTH_SERVICE;

service AuthService {
  rpc LoginDirectAccessGrants(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (LoginResponse);
}

//==================== Login ====================//
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  int32 expiresIn = 3;
  int32 refreshExpiresIn = 4;
}

// ==================== Refresh Token ====================//
message RefreshTokenRequest {
  string refreshToken = 1;
}

